Thu Oct 28 04:00:08 2010  Koichi Sasada  <ko1@atdot.net>

	* gc.c (GC.stat): added.  [ruby-dev:38607]

	* test/ruby/test_gc.rb: add a test for above.

Thu Oct 28 03:13:06 2010  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (memsize_of): fix rdoc.

	* ext/objspace/objspace.c (total_memsize_of_all_objects): added.

	* test/objspace/test_objspace.rb:
	  - add a test for ObjectSpace.total_memsize_of_all_objects.
	  - add two tests for ObjectSpace.memsize_of (for nil and Fixnum).

Wed Oct 27 23:55:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (Init_iconv): warn deprecated use.

Wed Oct 27 18:50:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* bignum.c (rb_big2long, rb_big2ulong): rb2ulong() returns VALUE, but
	  its real range is ulong. So, if the size of VALUE is bigger than
	  ulong, upper bits are always zero even if the actual value is
	  negative.
	  fixed #3490

Wed Oct 27 18:27:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (TestIO#pipe): should close write end of pipe
	  before closing read end, to get rid of timing problem.

	* test/ruby/test_io_m17n.rb (TestIO_M17N#pipe): ditto.

Wed Oct 27 18:14:27 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_getppid): support Win64.

Wed Oct 27 15:07:19 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread_win32.c (w32_error): should get error no only once, because
	  the result of the second getting will indicate the error of the
	  first FormatMessage() call.

Wed Oct 27 13:51:25 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (TestIO#pipe): need to propagate exceptions
	  in read/write thread. fix r29541.

	* test/ruby/test_io_m17n.rb (TestIO_M17N#pipe): ditto.

Wed Oct 27 12:05:40 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* class.c (clone_const): need to return value. fix r29602.

Wed Oct 27 11:58:58 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/ruby.h (NUM2LONG_internal): add cast to get rid of a